--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,5 +1,5 @@
 /**
-Title: about.component.css
+Title: login.component.css
 Author: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
 Contributors: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
 Date: 04/16/23
