--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <!--
-  Title: app.component.html
-  Author: Richard Krasso
+  Title: login.component.html
+  Author: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
   Contributors: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
   Date: 04/16/23
   Last Modified by: Walter McCue
@@ -8,4 +8,4 @@
   Description: html for the bcrs project
 -->
 
-<router-outlet></router-outlet>
+<p>login works!</p>
