--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,1 +1,11 @@
+<!--
+  Title: not-found.component.html
+  Author: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
+  Contributors: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
+  Date: 04/16/23
+  Last Modified by: Walter McCue
+  Last Modification Date: 04/16/23
+  Description: html for the bcrs project
+-->
+
 <p>not-found works!</p>
