--- a/src/app/shared/base-layout/base-layout.component.css
+++ b/src/app/shared/base-layout/base-layout.component.css
@@ -1,3 +1,13 @@
+/**
+Title: base-layout.component.css
+Author: Richard Krasso
+Contributors: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
+Date: 04/16/23
+Last Modified by: Walter McCue
+Last Modification Date: 04/16/23
+Description: component styling for the bcrs project
+*/
+
 .logo {
   margin-left: 75px;
   font-size: 24px;
