--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -1,3 +1,13 @@
+<!--
+  Title: base-layout.component.html
+  Author: Richard Krasso
+  Contributors: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
+  Date: 04/16/23
+  Last Modified by: Walter McCue
+  Last Modification Date: 04/16/23
+  Description: html for the bcrs project
+-->
+
 <div fxLayout="column">
 
   <!-- navigation -->
