--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -1,3 +1,12 @@
+/**
+Title: custom-theme.scss
+Author: Richard Krasso
+Contributors: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
+Date: 04/16/23
+Last Modified by: Walter McCue
+Last Modification Date: 04/16/23
+Description: Angular theme styling for the bcrs project
+*/
 
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
