--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,3 +1,13 @@
+/**
+Title: home.component.css
+Author: Richard Krasso
+Contributors: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
+Date: 04/16/23
+Last Modified by: Walter McCue
+Last Modification Date: 04/16/23
+Description: component styling for the bcrs project
+*/
+
 .main-welcome {
   margin-top: 30px;
 }
