--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,13 @@
+<!--
+  Title: home.component.html
+  Author: Richard Krasso
+  Contributors: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
+  Date: 04/16/23
+  Last Modified by: Walter McCue
+  Last Modification Date: 04/16/23
+  Description: html for the bcrs project
+-->
+
 <div fxLayout="column" class="main-welcome">
   <h1 class="title">
     Welcome to WEB 450's - Bob's Computer Repair Shop<br />
