style changes and neon buttons

--- a/src/app/pages/not-found/not-found.component.css
+++ b/src/app/pages/not-found/not-found.component.css
@@ -7,3 +7,8 @@ Last Modified by: Walter McCue
 Last Modification Date: 04/16/23
 Description: component styling for the bcrs project
 */
+
+p {
+  color: #fff;
+}
+
