--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -7,3 +7,7 @@ Last Modified by: Walter McCue
 Last Modification Date: 04/16/23
 Description: component styling for the bcrs project
 */
+
+p {
+  color: #fff;
+}
