--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -10,20 +10,21 @@
 
 <div fxLayout="column">
 
-  <!-- navigation -->
-  <nav fxFlex>
-    <mat-toolbar>
-      <!-- navbar container -->
-      <div class="navbar-container">
-        <!-- logo -->
-        <button class="logo" routerLink="/" mat-button>BCRS</button>
+  <header class="gradient-header">
 
-        <button class="navbar-link" routerLink="/" mat-button>Home</button>
-        <button class="navbar-link" mat-button>About</button>
-      </div>
+    <!-- navigation -->
+    <nav fxFlex>
 
-    </mat-toolbar>
-  </nav>
+        <!-- navbar container -->
+        <div class="navbar-container">
+          <a routerLink="/" class="neon-btn">HOME</a>
+          <a routerLink="/about" class="neon-btn">ABOUT</a>
+          <a routerLink="/contact" class="neon-btn">CONTACT</a>
+        </div>
+
+    </nav>
+
+  </header>
 
   <!-- main content -->
   <div fxFlex>
@@ -34,12 +35,12 @@
 
   <!-- footer -->
   <div fxFlex>
-    <footer class="footer">
-      <mat-toolbar class="footer-content">
+    <footer class="gradient-footer">
+      <div class="footer-content">
         <p>
-          &copy; {{year | date: 'yyyy'}} - nodebucket - <a href="https://www.bellevue.edu/" class="bu-link" target="_blank">Bellevue University</a>
+          &copy; {{year | date: 'yyyy'}} - Bob's Computer Repair Service - <a href="https://www.bellevue.edu/" class="bu-link" target="_blank">Bellevue University</a>
         </p>
-      </mat-toolbar>
+      </div>
     </footer>
   </div>
 </div>
