--- a/src/styles.css
+++ b/src/styles.css
@@ -6,9 +6,113 @@ Date: 04/16/23
 Last Modified by: Walter McCue
 Last Modification Date: 04/16/23
 Description: Global styling for the bcrs project
+References: .neon-btn { Kevin Powell: youtube/github; }
 */
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #000;
+}
+
+
+
+/* Color Styles */
+
+.primary-color {
+  background-color: #2a623d;
+  color: #000;
+}
+
+.accent-color {
+  background-color: #5d5d5d;
+  color: #000;
+}
+
+.gradient-header {
+  width: 100%;
+  background-image: linear-gradient(#5d5d5d, #000);
+}
+
+.gradient-footer {
+  width: 100%;
+  background-image: linear-gradient(#000, #5d5d5d);
+  height: 75px;
+}
+
+.gradient-menu {
+  background-color: #000;
+  box-shadow: 0 0 10px 5px #5d5d5d,
+  inset 0 0 10px 5px #5d5d5d;
+}
+
+
+/* Neon Button Styling */
+
+.neon-btn {
+  margin: 0 20px;
+  background-color: #000;
+  color: #2a623d;
+  display: inline-block;
+  cursor: pointer;
+  text-decoration: none;
+  border: #2a623d 4px solid;
+  border-radius: 10px;
+  padding: 5px;
+  text-shadow: 1px 1px 10px #2a623d;
+  width: 125px;
+  text-align: center;
+  box-shadow: 0 0 10px 5px #2a623d,
+  inset 0 0 10px 5px #2a623d;
+  position: relative;
+}
+
+.neon-btn::before {
+  content: "";
+  pointer-events: none;
+  position: absolute;
+  background: #2a623d;
+  top: 120%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: perspective(20px) rotateX(40deg) scale(1, .35);
+  filter: blur(20px);
+  opacity: .5;
+}
+
+.neon-btn::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: transparent;
+  box-shadow: 0 0 20px 10px #2a623d;
+  opacity: .5;
+}
+
+.neon-btn:hover, .neon-btn:focus {
+  background: #2a623d;
+  color:#000;
+  text-shadow: none;
+  outline: none;
+}
+
+.neon-btn:hover::before, .neon-btn:hover::after, .neon-btn:focus::before, .neon-btn:focus::after  {
+  opacity: 1;
+  outline: none;
+}
+
+
+
+/* Media Queries */
+
