component set-up and additional style classes

--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -8,4 +8,22 @@
   Description: html for the bcrs project
 -->
 
-<p>not-found works!</p>
+<h1 class="page-header">404 Error Page Not Found</h1>
+
+<div fxLayout="column">
+
+  <!-- Not Found Image -->
+  <div class="img-container">
+    <p style="text-align:center;">Insert Image Here</p>
+  </div>
+
+  <br><br>
+
+  <!-- Go Home Text -->
+  <div class="text-center">
+    <p>
+      Please return to the application: <a routerLink="/">Return</a>
+    </p>
+  </div>
+
+</div>
