--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -8,4 +8,35 @@
   Description: html for the bcrs project
 -->
 
-<p>contact works!</p>
+<h1 class="page-header">Contact Us</h1>
+
+<mat-card class="w-100">
+
+  <div fxLayout class="contact-container" >
+
+    <div fxFlex class="flex-container">
+
+      <!-- Address -->
+      <div class="text-center content-container">
+        <p style="font-size: 28px;"><i class="fa-solid fa-location-dot"></i></p>
+        <p>1234 My Street</p>
+        <p>My City, My State</p>
+      </div>
+
+      <!-- Phone -->
+      <div class="text-center content-container">
+        <p style="font-size: 28px;"><i class="fa-solid fa-phone"></i></p>
+        <p>Direct: 555-555-5555</p>
+        <p>Toll-free: 1-888-555-5555</p>
+        <p>Fax: 555-555-5555</p>
+      </div>
+
+    </div>
+
+  </div>
+
+  <div class="text-center">
+    <p>Please don't hesitate to see our headquarters or give us a call!</p>
+  </div>
+
+</mat-card>
