--- a/src/app/shared/base-layout/base-layout.component.css
+++ b/src/app/shared/base-layout/base-layout.component.css
@@ -22,7 +22,8 @@ Description: component styling for the bcrs project
 }
 
 .main-content {
-  padding-top: 100px;
+  padding: 100px 30px;
+
 }
 
 footer {
