--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -9,20 +9,39 @@
 -->
 
 <div fxLayout="column">
-  
+
   <header class="gradient-header">
+
     <!-- navigation -->
     <nav fxFlex>
+
       <!-- nabar image-->
       <div class="house-img">
         <img src="/assets/pngwing.com.png" alt="Slytherin Emblem" />
       </div>
+
       <!-- navbar container -->
       <div class="navbar-container">
         <a routerLink="/" class="neon-btn">HOME</a>
         <a routerLink="/about" class="neon-btn">ABOUT</a>
         <a routerLink="/contact" class="neon-btn">CONTACT</a>
       </div>
+
+      <div class="profile-menu">
+        <button mat-icon-button [matMenuTriggerFor]="profileMenu" aria-label="User Profile menu">
+          <mat-icon class="profile-btn">perm_identity</mat-icon>
+        </button>
+        <mat-menu #profileMenu class="accent-color">
+          <p style="padding: 10px; font-size: 18px; font-weight: bolder;">
+            Signed in as <span style="font-weight: normal;"><!-- {{ sessionName }} --></span>
+          </p>
+          <!-- <button mat-menu-item  (click)="logout()">
+            <mat-icon>logout</mat-icon>
+            <span style="font-size: 16px; font-weight: bolder">Log out</span>
+          </button> -->
+        </mat-menu>
+      </div>
+
     </nav>
   </header>
 
