--- a/src/app/pages/not-found/not-found.component.css
+++ b/src/app/pages/not-found/not-found.component.css
@@ -8,7 +8,14 @@ Last Modification Date: 04/16/23
 Description: component styling for the bcrs project
 */
 
+h1 {
+  padding: 50px;
+  font-size: 48px;
+}
+
 p {
+  padding: 50px;
   color: #fff;
+  font-size: 24px;
 }
 
