--- a/src/app/pages/server-error/server-error.component.html
+++ b/src/app/pages/server-error/server-error.component.html
@@ -22,7 +22,7 @@
   <!-- Go Home Text -->
   <div class="text-center">
     <p>
-      Please return to the application: <a routerLink="/">Return</a>
+      Please return to the application: <a routerLink="/" class="neon-btn">Return</a>
     </p>
   </div>
 
