--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,11 @@ References: .neon-btn { Kevin Powell: youtube/github; }
 
 
 
+:root {
+  --green: #2a623d;
+  --silver: #5d5d5d;
+}
+
 html, body {
   height: 100%;
 }
@@ -25,6 +30,7 @@ body {
 .page-header {
   color: #fff;
   text-align: center;
+  font-size: 48px;
 }
 
 .text-center {
@@ -36,30 +42,30 @@ body {
 /* Color Styles */
 
 .primary-color {
-  background-color: #2a623d;
+  background-color: var(--green);
   color: #000;
 }
 
 .accent-color {
-  background-color: #5d5d5d;
+  background-color: var(--silver);
   color: #000;
 }
 
 .gradient-header {
   width: 100%;
-  background-image: linear-gradient(#5d5d5d, #000);
+  background-image: linear-gradient(var(--silver), #000);
 }
 
 .gradient-footer {
   width: 100%;
-  background-image: linear-gradient(#000, #5d5d5d);
+  background-image: linear-gradient(#000, var(--silver));
   height: 75px;
 }
 
 .gradient-menu {
   background-color: #000;
-  box-shadow: 0 0 10px 5px #5d5d5d,
-  inset 0 0 10px 5px #5d5d5d;
+  box-shadow: 0 0 10px 5px var(--silver),
+  inset 0 0 10px 5px var(--silver);
 }
 
 
@@ -92,18 +98,18 @@ body {
 .neon-btn {
   margin: 30px 30px 0 30px;
   background-color: #000;
-  color: #2a623d;
+  color: var(--green);
   display: inline-block;
   cursor: pointer;
   text-decoration: none;
-  border: #2a623d 4px solid;
+  border: var(--green) 4px solid;
   border-radius: 10px;
   padding: 5px;
-  text-shadow: 1px 1px 10px #2a623d;
+  text-shadow: 1px 1px 10px var(--green);
   width: 125px;
   text-align: center;
-  box-shadow: 0 0 10px 5px #2a623d,
-  inset 0 0 10px 5px #2a623d;
+  box-shadow: 0 0 10px 5px var(--green),
+  inset 0 0 10px 5px var(--green);
   position: relative;
 }
 
@@ -111,7 +117,7 @@ body {
   content: "";
   pointer-events: none;
   position: absolute;
-  background: #2a623d;
+  background: var(--green);
   top: 120%;
   left: 0;
   width: 100%;
@@ -129,12 +135,12 @@ body {
   left: 0;
   right: 0;
   background: transparent;
-  box-shadow: 0 0 20px 10px #2a623d;
+  box-shadow: 0 0 20px 10px var(--green);
   opacity: .5;
 }
 
 .neon-btn:hover, .neon-btn:focus {
-  background: #2a623d;
+  background: var(--green);
   color:#000;
   text-shadow: none;
   outline: none;
