--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -40,8 +40,8 @@
 
       <!-- House Hufflepuff Image -->
       <div class="content-container">
-        <div class="img-container">
-          <p style="text-align:center;">Insert Image Here</p>
+        <div class="img-container house-img">
+          <img src="/assets/pngwing.com.png" alt="Slytherin Emblem" />
         </div>
       </div>
 
