--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -13,8 +13,8 @@
 <div fxLayout="column">
 
   <!-- Not Found Image -->
-  <div class="img-container">
-    <p style="text-align:center;">Insert Image Here</p>
+  <div class="img-container house-img">
+    <img src="/assets/pngwing.com.png" alt="Slytherin Emblem" />
   </div>
 
   <br><br>
