--- a/src/app/pages/server-error/server-error.component.html
+++ b/src/app/pages/server-error/server-error.component.html
@@ -12,9 +12,9 @@
 
 <div fxLayout="column">
 
-  <!-- Not Found Image -->
-  <div class="img-container">
-    <p style="text-align:center;">Insert Image Here</p>
+  <!-- Server Error Image -->
+  <div class="img-container house-img">
+    <img src="/assets/pngwing.com.png" alt="Slytherin Emblem" />
   </div>
 
   <br><br>
