--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -31,7 +31,7 @@
         <button mat-icon-button [matMenuTriggerFor]="profileMenu" aria-label="User Profile menu">
           <mat-icon class="profile-btn">perm_identity</mat-icon>
         </button>
-        <mat-menu #profileMenu class="accent-color">
+        <mat-menu #profileMenu class="accent-color p-20">
           <p style="padding: 10px; font-size: 18px; font-weight: bolder;">
             Signed in as <span style="font-weight: normal;"><!-- {{ sessionName }} --></span>
           </p>
