--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -48,6 +48,7 @@
             <mat-form-field appearance="standard">
               <input
                 matInput
+                type="password"
                 formControlName="password"
                 placeholder="   Password"
               />
