--- a/src/app/pages/user-list/user-list.component.html
+++ b/src/app/pages/user-list/user-list.component.html
@@ -1,1 +1,57 @@
-<p>user-list works!</p>
+
+
+
+<p-confirmDialog [style]="{width: '35vw'}" [baseZIndex]="10000" rejectButtonStyleClass="p-button-text"></p-confirmDialog>
+
+<div fxLayout="column" fxLayoutGap="20px">
+
+  <div fxFlex>
+    <h1 class="page-header">
+      Users Configuration Page!<br />
+      <span class="subtitle">
+        To add a new record select the Add User button.
+      </span>
+    </h1>
+  </div>
+
+  <!-- Add User Button -->
+  <div fxFlex>
+    <a routerLink="/users/create/new" class="neon-btn">Add User</a>
+  </div>
+
+  <!-- Table Data -->
+  <div fxFlex>
+    <p-table [value]="users" responsiveLayout="scroll">
+
+      <ng-template pTemplate="header">
+        <tr>
+          <th>First Name</th>
+          <th>Last Named</th>
+          <th>Phone Number</th>
+          <th>Email</th>
+          <th>Address</th>
+          <th style="width: 8rem;"></th>
+        </tr>
+      </ng-template>
+
+      <ng-template pTemplate="body" let-user>
+        <tr>
+          <td>{{user.firstName}}</td>
+          <td>{{user.lastName}}</td>
+          <td>{{user.phoneNumber}}</td>
+          <td>{{user.email}}</td>
+          <td>{{user.address}}</td>
+          <td style="text-align: center;">
+            <button pButton pRipple type="button" routerLink="/users/{{user._id}}" icon="pi pi-pencil" class="p-button-rounded p-button-text"></button>
+            <button pButton pRipple type="button" (click)="delete(user._id)" icon="pi pi-trash" class="p-button-rounded p-button-text"></button>
+          </td>
+        </tr>
+      </ng-template>
+      
+    </p-table>
+  </div>
+
+</div>
+
+
+
