Modified authGuard and baseLayout

--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -37,10 +37,10 @@
             Signed in as
             <span style="font-weight: normal">{{ userName }}</span>
           </p>
-          <!-- <button mat-menu-item  (click)="logout()">
+          <button mat-menu-item  (click)="logout()">
             <mat-icon>logout</mat-icon>
             <span style="font-size: 16px; font-weight: bolder">Log out</span>
-          </button> -->
+          </button>
         </mat-menu>
       </div>
     </nav>
