--- a/src/app/pages/user-list/user-list.component.html
+++ b/src/app/pages/user-list/user-list.component.html
@@ -1,10 +1,10 @@
-
-
-
-<p-confirmDialog [style]="{width: '35vw'}" [baseZIndex]="10000" rejectButtonStyleClass="p-button-text"></p-confirmDialog>
+<p-confirmDialog
+  [style]="{ width: '35vw' }"
+  [baseZIndex]="10000"
+  rejectButtonStyleClass="p-button-text"
+></p-confirmDialog>
 
 <div fxLayout="column" fxLayoutGap="20px">
-
   <div fxFlex>
     <h1 class="page-header">
       Users Configuration Page!<br />
@@ -16,14 +16,13 @@
 
   <!-- Add User Button -->
   <div fxFlex class="text-center">
-    <a routerLink="/users/create/new" class="neon-btn">Add User</a>
+    <a routerLink="/session/user-create" class="neon-btn">Add User</a>
   </div>
 
   <!-- Table Data -->
   <div fxFlex class="p-20">
     <mat-card>
       <p-table [value]="users" responsiveLayout="scroll">
-
         <ng-template pTemplate="header">
           <tr>
             <th>First Name</th>
@@ -31,30 +30,38 @@
             <th>Phone Number</th>
             <th>Email</th>
             <th>Address</th>
-            <th style="width: 8rem;"></th>
+            <th style="width: 8rem"></th>
           </tr>
         </ng-template>
 
         <ng-template pTemplate="body" let-user>
           <tr>
-            <td>{{user.firstName}}</td>
-            <td>{{user.lastName}}</td>
-            <td>{{user.phoneNumber}}</td>
-            <td>{{user.email}}</td>
-            <td>{{user.address}}</td>
-            <td style="text-align: center;">
-              <button pButton pRipple type="button" routerLink="/users/{{user._id}}" icon="pi pi-pencil" class="p-button-rounded p-button-text"></button>
-              <button pButton pRipple type="button" (click)="delete(user._id)" icon="pi pi-trash" class="p-button-rounded p-button-text"></button>
+            <td>{{ user.firstName }}</td>
+            <td>{{ user.lastName }}</td>
+            <td>{{ user.phoneNumber }}</td>
+            <td>{{ user.email }}</td>
+            <td>{{ user.address }}</td>
+            <td style="text-align: center">
+              <button
+                pButton
+                pRipple
+                type="button"
+                routerLink="/users/{{ user._id }}"
+                icon="pi pi-pencil"
+                class="p-button-rounded p-button-text"
+              ></button>
+              <button
+                pButton
+                pRipple
+                type="button"
+                (click)="delete(user._id)"
+                icon="pi pi-trash"
+                class="p-button-rounded p-button-text"
+              ></button>
             </td>
           </tr>
         </ng-template>
-
       </p-table>
     </mat-card>
   </div>
-
-
 </div>
-
-
-
