Update path for Add User

--- a/src/app/pages/user-list/user-list.component.html
+++ b/src/app/pages/user-list/user-list.component.html
@@ -16,7 +16,7 @@
 
   <!-- Add User Button -->
   <div fxFlex class="text-center">
-    <a routerLink="/session/user-create" class="neon-btn">Add User</a>
+    <a routerLink="/user-create" class="neon-btn">Add User</a>
   </div>
 
   <!-- Table Data -->
