--- a/src/app/pages/security-question-list/security-question-list.component.html
+++ b/src/app/pages/security-question-list/security-question-list.component.html
@@ -1,1 +1,60 @@
-<p>security-question-list works!</p>
+<p-confirmDialog [style]="{ width: '35vw' }" [baseZIndex]="10000"
+  rejectButtonStyleClass="p-button-text"></p-confirmDialog>
+
+<div fxLayout="column" fxLayoutGap="20px">
+  <div fxFlex>
+    <h1 class="title">
+      Security Questions Configuration Page! <br />
+      <span class="subtitle">
+        Fields marked with an asterisk(*) are required.
+      </span>
+    </h1>
+  </div>
+
+  <div fxFlex>
+    <div fxLayout="column" class="pageDesign">
+      <mat-card>
+        <form [formGroup]="sqForm" (ngSubmit)="create(); sqForm.reset()">
+          <mat-form-field appearance="fill" class="w-100">
+            <mat-label>Security question</mat-label>
+            <input type="text" matInput formControlName="text" required placeholder="Enter a security question..." />
+
+            <button type="submit" [disabled]="!sqForm.valid" mat-icon-button matSuffix>
+              <mat-icon color="primary" style="width: 36px; height: 36px; font-size: 36px" matSuffix>
+                add_circle</mat-icon>
+            </button>
+          </mat-form-field>
+
+          <mat-error *ngIf="sqForm.controls['text'].hasError('required') && sqForm.controls['text'].touched">
+            Security question is a required field.
+          </mat-error>
+        </form>
+      </mat-card>
+    </div>
+  </div>
+
+
+  <div fxFlex>
+    <p-table [value]="securityQuestions" responsiveLayout="scroll">
+      <ng-template pTemplate="header">
+        <tr>
+          <th>Text
+          </th>
+          <th style="width: 8rem"></th>
+        </tr>
+      </ng-template>
+
+      <ng-template pTemplate="body" let-sq>
+        <tr>
+          <td>{{ sq.text }}</td>
+          <td style="text-align: center">
+            <button pButton pRipple type="button" routerLink="/security-questions/{{ sq._id }}" icon="pi pi-pencil"
+              class="p-button-rounded p-button-text"></button>
+            <button pButton pRipple type="button" (click)="delete(sq._id)" icon="pi pi-trash"
+              class="p-button-rounded p-button-text"></button>
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
+</div>
