--- a/src/app/pages/security-question-list/security-question-list.component.html
+++ b/src/app/pages/security-question-list/security-question-list.component.html
@@ -3,7 +3,7 @@
 
 <div fxLayout="column" fxLayoutGap="20px">
   <div fxFlex>
-    <h1 class="title">
+    <h1 class="page-header">
       Security Questions Configuration Page! <br />
       <span class="subtitle">
         Fields marked with an asterisk(*) are required.
