--- a/src/styles.css
+++ b/src/styles.css
@@ -160,6 +160,26 @@ body {
   width: 50%;
 }
 
+/* API Tables */
+
+.api-table {
+  padding: 5px;
+}
+
+.api-table th, .api-table td {
+  padding: 5px;
+  text-align: left;
+
+}
+
+.api-table th {
+  background-color: #48494b;
+}
+
+.api-table tr:nth-of-type(2n) {
+  background-color: #48494b;
+}
+
 /* Media Queries */
 
 @media screen and (max-width: 800px) {
@@ -170,5 +190,28 @@ body {
 
   .content-container {
     width: 95%;
+  }
+
+  /* API Tables */
+  .api-table th {
+    display: none;
+  }
+  .api-table td {
+    display: grid;
+    padding: 3px 5px;
+  }
+  .api-table td button {
+    width: 50px;
+  }
+  .api-table td::before {
+    content: attr(data-cell);
+    font-weight: 700;
+    text-transform: capitalize;
+  }
+  .api-table td:first-child {
+    padding-top: 10px;
+  }
+  .api-table td:last-child {
+    padding-bottom: 10px;
   }
 }
