updated changes to about and security
updated changes to about and security

--- a/src/app/pages/security-question-list/security-question-list.component.html
+++ b/src/app/pages/security-question-list/security-question-list.component.html
@@ -36,10 +36,10 @@
 
   <div fxFlex>
     <mat-card>
-      <p-table [value]="securityQuestions" responsiveLayout="scroll">
+      <p-table [value]="securityQuestions" responsiveLayout="scroll" class="api-table">
         <ng-template pTemplate="header">
           <tr>
-            <th>Text
+            <th>Security Questions
             </th>
             <th style="width: 8rem"></th>
           </tr>
