--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -27,7 +27,7 @@
         <h1>Owners</h1>
         <p>
           The four owners include Thomas Schultz, Jamal Damir, Carl Logan, and Walter McCue. All four of them graduated
-          from Hogwarts School of Witchcraft and Wizardy. They were all in Slytherin House. They became good friends in
+          from Hogwarts School of Witchcraft and Wizardry. They were all in Slytherin House. They became good friends in
           their first year and started working on helping both the wizard world and muggle world. They are proud of this
           website and hope to help more.
         </p>
