--- a/src/app/pages/user-list/user-list.component.html
+++ b/src/app/pages/user-list/user-list.component.html
@@ -20,7 +20,7 @@
   </div>
 
   <div>
-    <p-messages [(value)]="serverMessages" [enableService]="false"></p-messages>
+    <p-messages [(value)]="serverMessages" [enableService]="false" style="color: #fff;"></p-messages>
   </div>
 
   <!-- Table Data -->
