dialog component updated
dialog component updated

--- a/src/app/pages/security-question-list/security-question-list.component.html
+++ b/src/app/pages/security-question-list/security-question-list.component.html
@@ -11,6 +11,10 @@
     </h1>
   </div>
 
+  <div>
+    <p-messages [(value)]="serverMessages" [enableService]="false" style="color: #fff;"></p-messages>
+  </div>
+
   <div fxFlex>
     <div fxLayout="column" class="pageDesign">
       <mat-card>
