--- a/src/app/shared/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/shared/confirm-dialog/confirm-dialog.component.html
@@ -13,13 +13,13 @@
 
 <div mat-dialog-content>
   <p>{{ dialogData.body }}</p>
-  <p><i class="fa-solid fa-triangle-exclamation"></i> WARNING: This action cannot be undone.</p>
+  <p class="dialog-warning"><i class="fa-solid fa-triangle-exclamation"></i> WARNING: This action cannot be undone.</p>
 </div>
 
 <mat-divider></mat-divider>
 
 <div mat-dialog-actions class="dialog-buttons">
-  <button mat-raised-button matDialogClose="cancel" class="primary-color">Cancel</button>
+  <button mat-raised-button matDialogClose="cancel" class="cancel">Cancel</button>
   <button mat-raised-button matDialogClose="confirm" class="primary-color" cdkFocusInitial>Confirm</button>
 </div>
 
